# fontforge

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile.am  README.md  bootstrap  configure.ac  meson.build  meson_options.txt  pkg.mk
Unicode/: ArabicForm2.c  ArabicForms.c  CMakeLists.txt  Makefile.am  makeutype.py  meson.build  unialt.c  unialt2.c  uninames.c  uninames_data.h  uninamestest.c  ustring.c  utype2.c  utype2.h
Unicode/data/: makeutypedata.py
Unicode/old/: data2.py  splitbins.py  utypeflags.txt  vftest.py  vis.py  visualalts.py  visualalts2.py
cmake/: BuildOption.cmake  BuildUtils.cmake  DownloadIfMissing.cmake  FontForgeConfigure.cmake  PackageUtils.cmake  TargetUtils.cmake  TestUtils.cmake
cmake/backports/: README.md
cmake/backports/3.14.5/FindPython/: Support.cmake
cmake/backports/3.20.1/: FindGIF.cmake  FindIconv.cmake  FindIntl.cmake  FindLibXml2.cmake
cmake/backports/3.20.1/FindPython/: Support.cmake
cmake/scripts/: AddHeader.cmake
cmake/testing/: TestFixture.cmake  TestFixtureUtils.cmake
collab/: Makefile.am  zmq_kvmsg.c
contrib/: CMakeLists.txt
contrib/cidmap/: CMakeLists.txt
contrib/fonttools/: CMakeLists.txt
debian/: changelog  clean  control  fontforge-common.manpages  fontforge.menu  libfontforge4.install  rules
desktop/: CMakeLists.txt  Makefile.am
doc/: CMakeLists.txt
doc/html/: CMakeLists.txt  OFL-FAQ-Unofficial-vi.html  OFL-Unofficial-vi.html  charview.html  faq.html  python.html
doc/sphinx/: appendices.rst  conf.py  editspiro.rst  faq.rst  fontutils.rst  glossary.rst  index.rst  scripting.rst  techref.rst  tutorial.rst  ui.rst
doc/sphinx/_extensions/: fixed_image.py  flex_grid.py  hacks.py
doc/sphinx/_static/: custom.css
doc/sphinx/appendices/: OFL-Unofficial.rst  bezier.rst  bibliography.rst  cliargs.rst  corpchar.rst  diffs.rst  errrecovery.rst  ff-history.rst  files.rst  fontstyles.rst  nonbmp.rst  otherlinks.rst  uitranslationnotes.rst
doc/sphinx/appendices/ofl/: OFL-FAQ-Unofficial-fr.rst  OFL-FAQ-Unofficial-vi.rst  OFL-Unofficial-el.rst  OFL-Unofficial-fr.rst  OFL-Unofficial-pl.rst  OFL-Unofficial-vi.rst
doc/sphinx/fontutils/: acorn2sfd.rst  fontimage.rst  fontlint.rst  sfddiff.rst
doc/sphinx/python/: fontforge.rst  psMat.rst
doc/sphinx/scripting/: python.rst  scripting-alpha.rst  scripting.rst
doc/sphinx/scripting/python/: fontforge.rst
doc/sphinx/techref/: BDFGrey.rst  PfaEdit-TeX.rst  bitmaponlysfnt.rst  gposgsub.rst  pcf-format.rst  pfaeditmath.rst  sfd.rst  sfdformat.rst  splinefont.rst  stroke.rst
doc/sphinx/tutorial/: editexample.rst  editexample2.rst  editexample3.rst  editexample4.rst  editexample5.rst  editexample6-5.rst  editexample6.rst  editexample7.rst  editexample8.rst  editspiro.rst  importexample.rst  scripting-tutorial.rst
doc/sphinx/ui/: HotKeys.rst  bitmapview.rst  charview.rst  fontview.rst  hinting.rst  metricsview.rst  resedit.rst
doc/sphinx/ui/dialogs/: InsertTextDlg.rst  Styles.rst  charinfo.rst  display.rst  fontinfo.rst  generate.rst  multilayer.rst  prefs.rst  (+1 more)
fontforge/: CMakeLists.txt  Makefile.am  autohint.c  autosave.c  autotrace.c  autowidth.c  baseviews.h  charview_private.h  cvexport.c  cvimages.c  cvundoes.c  delta.h  dumpbdf.c  dumppfa.c  encoding.c  encoding.h  featurefile.c  fffreetype.h  flaglist.h  fontforge.h  fontforgeui.h  fontforgevw.h  fontviewbase.c  freetype.c  fvfonts.c  fvimportbdf.c  glif_name_hash.h  groups.c  groups.h  http.c  ikarus.c  lookups.c  macbinary.c  meson.build  namelist.c  noprefs.c  othersubrs.c  palmfonts.c  parsepdf.c  parsepfa.c  (+27 more)
fontforgeexe/: CMakeLists.txt  Makefile.am  bitmapview.c  charinfo.c  charview.c  collabclientui.c  cvaddpoints.c  cvfreehand.c  cvgetinfo.c  cvimportdlg.c  cvpalettes.c  cvpointer.c  displayfonts.c  encodingui.c  fontforgeexe.h  fontinfo.c  fontview.c  histograms.c  kernclass.c  lookupui.c  macobjective.h  macobjective.m  meson.build  metricsview.c  openfontdlg.c  prefs.c  pythonui.c  savefontdlg.c  sftextfield.c  showatt.c  startui.c  uiutil.c  windowmenu.c  wordlistparser.h
fontforgeexe/collab/: Makefile.am  fontforge-internal-collab-server.c
fontforgeexe/pixmaps/: CMakeLists.txt
fontforgeexe/pixmaps/2012/: CMakeLists.txt
fontforgeexe/pixmaps/tango/: CMakeLists.txt
gdraw/: CMakeLists.txt  Makefile.am  colorP.h  fontP.h  gchardlg.c  gdraw.c  gdrawP.h  gdrawtxt.c  gfilechooser.c  ggadgetP.h  ggdkcdraw.c  ggdkdraw.c  ggdkdrawP.h  ggdkdrawlogger.c  ggdkdrawloggerP.h  ggtkcdraw.c  ggtkdraw.c  ggtkdrawP.h  ggtkwindow.c  gimagebmpP.h  gimagepsdraw.c  gimagexdraw.c  gmatrixedit.c  gpsdraw.c  gpsdrawP.h  gpstxtinit.c  gresedit.c  gresource.c  gresourceP.h  gtextfield.c  gtextinfo.c  gtkbridge.c  gtkbridge.h  gwidgets.c  gxcdraw.c  gxcdrawP.h  gxdraw.c  gxdrawP.h  hotkeys.c  hotkeys.h  (+1 more)
gtkui/: prefs.c
gutils/: CMakeLists.txt  Makefile.am  fsys.c  g_giomime.c  gimagebmpP.h  gimagereadbmp.c  gimagereadgif.c  gimagereadjpeg.c  gimagereadpng.c  gimagereadras.c  gimagereadrgb.c  gimagereadxbm.c  gimagereadxpm.c  gimagewritebmp.c  gimagewritegimage.c  gimagewritejpeg.c  gimagewritepng.c  gimagewritexbm.c  gimagewritexpm.c  gioP.h  giofile.c  gioftp.c  giofuncP.h  giohosts.c  gnetwork.c  gutils.c  inet_ntop.c  meson.build  prefs.c  unicodelibinfo.c  unicodelibinfo.h
inc/: CMakeLists.txt  Makefile.am  basics.h  chardata.h  charset.h  dynamic.h  ffgdk.h  ffglib.h  ffgtk.h  fontforge-config.h.in  gdraw.h  gfile.h  gimage.h  gio.h  gkeysym.h  gprogress.h  gresedit.h  gresource.h  gutils.h  gwidget.h  gwwiconv.h  intl.h  meson.build  ustring.h  utype2.h
m4/: fontforge_arg_enable.m4  fontforge_arg_with.m4  fontforge_platform_specifics.m4
mk/: layout.am
osx/: CMakeLists.txt
plugins/: Makefile.am
po/: CMakeLists.txt  FontForge.pot  Makefile.am
pycontrib/: CMakeLists.txt
pyhook/: CMakeLists.txt  Makefile.am  fontforgepyhook.c
share/: CMakeLists.txt
tests/: CMakeLists.txt  randomtest.c  systestdriver.c
travis-scripts/: before_install_osx.sh  create-osx-app.sh  ffosxbuild.sh  fontforge.rb  install_osx.sh  libuninameslist.rb  pango.rb  script_osx.sh
(+15 files in other folders)
