add_library(gunicode OBJECT
  ArabicForms.c
  char.c
  combiners.h
  gwwiconv.c
  is_Ligature_data.h
  is_Ligature.c
  memory.c
  ucharmap.c
  unialt.c
  ustring.c
  utype.c

  charset/alphabet.c
  charset/big5.c
  charset/big5hkscs.c
  charset/gb2312.c
  charset/iso_8859_10.c
  charset/iso_8859_11.c
  charset/iso_8859_13.c
  charset/iso_8859_14.c
  charset/iso_8859_15.c
  charset/iso_8859_16.c
  charset/iso_8859_1.c
  charset/iso_8859_2.c
  charset/iso_8859_3.c
  charset/iso_8859_4.c
  charset/iso_8859_5.c
  charset/iso_8859_6.c
  charset/iso_8859_7.c
  charset/iso_8859_8.c
  charset/iso_8859_9.c
  charset/jis201.c
  charset/jis.c
  charset/johab.c
  charset/koi8_r.c
  charset/ksc5601.c
  charset/mac.c
  charset/MacSymbol.c
  charset/win.c
  charset/ZapfDingbats.c
)

if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
  target_include_directories(gunicode
    PUBLIC
      ${FONTFORGE_COMMON_INCLUDE_DIRS}
    PRIVATE
      ${GLIB_INCLUDE_DIRS}
  )
else()
  target_link_libraries(gunicode
    PUBLIC
      fontforge_common_headers
    PRIVATE
      GLIB::GLIB
  )
endif()

