gunicode_sources = files([
  'charset/alphabet.c',
  'charset/big5.c',
  'charset/big5hkscs.c',
  'charset/gb2312.c',
  'charset/iso_8859_10.c',
  'charset/iso_8859_11.c',
  'charset/iso_8859_13.c',
  'charset/iso_8859_14.c',
  'charset/iso_8859_15.c',
  'charset/iso_8859_16.c',
  'charset/iso_8859_1.c',
  'charset/iso_8859_2.c',
  'charset/iso_8859_3.c',
  'charset/iso_8859_4.c',
  'charset/iso_8859_5.c',
  'charset/iso_8859_6.c',
  'charset/iso_8859_7.c',
  'charset/iso_8859_8.c',
  'charset/iso_8859_9.c',
  'charset/jis201.c',
  'charset/jis.c',
  'charset/johab.c',
  'charset/koi8_r.c',
  'charset/ksc5601.c',
  'charset/mac.c',
  'charset/MacSymbol.c',
  'charset/win.c',
  'charset/ZapfDingbats.c',
  'ArabicForms.c',
  'char.c',
  'is_Ligature.c',
  'is_Ligature_data.h',
  'memory.c',
  'ucharmap.c',
  'unialt.c',
  'ustring.c',
  'utype.c',
  'gwwiconv.c',
])

libgunicode = static_library('gunicode',
  gunicode_sources,
  include_directories: default_includes,
  dependencies: iconv_dep,
)

libgunicode_dep = declare_dependency(link_with : libgunicode, dependencies: iconv_dep)
