noinst_fontforge_headers = files([
  'asmfpst.h',
  'autohint.h',
  'autosave.h',
  'autotrace.h',
  'autowidth.h',
  'autowidth2.h',
  'bitmapchar.h',
  'bitmapcontrol.h',
  'bvedit.h',
  'charview_private.h',
  'clipnoui.h',
  'configure-fontforge.h',
  'crctab.h',
  'cvexport.h',
  'cvimages.h',
  'cvundoes.h',
  'dumpbdf.h',
  'dumppfa.h',
  'effects.h',
  'encoding.h',
  'featurefile.h',
  'fontforgeui.h',
  'fvcomposite.h',
  'fvfonts.h',
  'fvimportbdf.h',
  'ikarus.h',
  'langfreq.h',
  'libstamp.h',
  'macbinary.h',
  'macenc.h',
  'mathconstants.h',
  'namelist.h',
  'othersubrs.h',
  'palmfonts.h',
  'parsepdf.h',
  'parsepfa.h',
  'parsettf.h',
  'parsettfatt.h',
  'parsettfbmf.h',
  'parsettfvar.h',
  'psread.h',
  'pua.h',
  'savefont.h',
  'scstyles.h',
  'sfd.h',
  'sftextfieldP.h',
  'spiro.h',
  'splinefill.h',
  'splineorder2.h',
  'splineoverlap.h',
  'splinerefigure.h',
  'splinesave.h',
  'splinesaveafm.h',
  'splinestroke.h',
  'splineutil.h',
  'splineutil2.h',
  'start.h',
  'strlist.h',
  'svg.h',
  'tottf.h',
  'tottfaat.h',
  'tottfgpos.h',
  'tottfvar.h',
  'ttfspecial.h',
  'winfonts.h',
  'woff.h',
  'zapfnomen.h',
])

pkginclude_fontforge_headers = files([
  'autowidth.h',
  'autowidth2.h',
  'baseviews.h',
  'bezctx_ff.h',
  'bitmapcontrol.h',
  'configure-fontforge.h',
  'cvruler.h',
  'delta.h',
  'edgelist.h',
  'edgelist2.h',
  'encoding.h',
  'fffreetype.h',
  'ffpython.h',
  'flaglist.h',
  'fontforge.h',
  'fontforgevw.h',
  'fvmetrics.h',
  'glif_name_hash.h',
  'glyphcomp.h',
  'groups.h',
  'libffstamp.h',
  'lookups.h',
  'mem.h',
  'mm.h',
  'namehash.h',
  'nonlineartrans.h',
  'ofl.h',
  'PfEd.h',
  'print.h',
  'psfont.h',
  'savefont.h',
  'scriptfuncs.h',
  'scripting.h',
  'sd.h',
  'search.h',
  'sfd1.h',
  'sflayoutP.h',
  'splinefont.h',
  'stemdb.h',
  'ttf.h',
  'ttfinstrs.h',
  'uiinterface.h',
  'unicoderange.h',
  'usermenu.h',
  'views.h',
])

fontforge_sources = files([
  'activeinui.c',
  'asmfpst.c',
  'autohint.c',
  'autosave.c',
  'autotrace.c',
  'autowidth.c',
  'autowidth2.c',
  'bezctx_ff.c',
  'bitmapchar.c',
  'bitmapcontrol.c',
  'bvedit.c',
  'clipnoui.c',
  'crctab.c',
  'cvexport.c',
  'cvimages.c',
  'cvundoes.c',
  'dumpbdf.c',
  'dumppfa.c',
  'effects.c',
  'encoding.c',
  'featurefile.c',
  'flaglist.c',
  'fontviewbase.c',
  'freetype.c',
  'ftdelta.c',
  'fvcomposite.c',
  'fvfonts.c',
  'fvimportbdf.c',
  'fvmetrics.c',
  'glif_name_hash.c',
  'glyphcomp.c',
  'groups.c',
  'ikarus.c',
  'langfreq.c',
  'lookups.c',
  'macbinary.c',
  'macenc.c',
  'mathconstants.c',
  'mem.c',
  'mm.c',
  'namelist.c',
  'nonlineartrans.c',
  'noprefs.c',
  'nouiutil.c',
  'nowakowskittfinstr.c',
  'ofl.c',
  'othersubrs.c',
  'palmfonts.c',
  'parsepdf.c',
  'parsepfa.c',
  'parsettf.c',
  'parsettfatt.c',
  'parsettfbmf.c',
  'parsettfvar.c',
  'print.c',
  'psread.c',
  'pua.c',
  'python.c',
  'savefont.c',
  'scripting.c',
  'scstyles.c',
  'search.c',
  'sfd.c',
  'sfd1.c',
  'sflayout.c',
  'sfundo.h',
  'spiro.c',
  'splinechar.c',
  'splinefill.c',
  'splinefont.c',
  'splineorder2.c',
  'splineoverlap.c',
  'splinerefigure.c', # special case?
  'splinesave.c',
  'splinesaveafm.c',
  'splinestroke.c',
  'splineutil.c',
  'splineutil2.c',
  'start.c',
  'stemdb.c',
  'strlist.c',
  'svg.c',
  'tottf.c',
  'tottfaat.c',
  'tottfgpos.c',
  'tottfvar.c',
  'ttfinstrs.c',
  'ttfspecial.c',
  'ufo.c',
  'unicoderange.c',
  'winfonts.c',
  'woff.c',
  'zapfnomen.c',
])

libfontforge = static_library('fontforge',
  noinst_fontforge_headers,
  pkginclude_fontforge_headers,
  fontforge_sources,
  include_directories: default_includes,
  dependencies: [libgutils_dep, freetype_dep, libxml2_dep, zlib_dep, libgdraw_dep, libspiro_dep, m_dep],
)

libfontforge_dep = declare_dependency(link_with : libfontforge)
