fontforge_graphical_sources = files([
  'alignment.c',
  'anchorsaway.c',
  'autowidth2dlg.c',
  'basedlg.c',
  'bdfinfo.c',
  'bitmapdlg.c',
  'bitmapview.c',
  'charinfo.c',
  'charview.c',
  'clipui.c',
  'combinations.c',
  'contextchain.c',
  'cursors.c',
  'cvaddpoints.c',
  'cvdebug.c',
  'cvdgloss.c',
  'cvexportdlg.c',
  'cvfreehand.c',
  'cvgetinfo.c',
  'cvgridfit.c',
  'cvhand.c',
  'cvhints.c',
  'cvimportdlg.c',
  'cvknife.c',
  'cvpalettes.c',
  'cvpointer.c',
  'cvruler.c',
  'cvshapes.c',
  'cvstroke.c',
  'cvtranstools.c',
  'deltaui.c',
  'displayfonts.c',
  'effectsui.c',
  'encodingui.c',
  'fontforgeexe.h',
  'fontinfo.c',
  'fontview.c',
  'freetypeui.c',
  'fvfontsdlg.c',
  'fvmetricsdlg.c',
  'gotodlg.c',
  'groupsdlg.c',
  'histograms.c',
  'images.c',
  'justifydlg.c',
  'kernclass.c',
  'layer2layer.c',
  'lookupui.c',
  'macencui.c',
  'macobjective.h',
  'main.c',
  'math.c',
  'metricsview.c',
  'mmdlg.c',
  'nonlineartransui.c',
  'openfontdlg.c',
  'prefs.c',
  'problems.c',
  'pythonui.c',
  'savefontdlg.c',
  'scriptingdlg.c',
  'scstylesui.c',
  'searchview.c',
  'sftextfield.c',
  'sfundo.c',
  'showatt.c',
  'simplifydlg.c',
  'splashimage.c',
  'startui.c',
  'statemachine.c',
  'tilepath.c',
  'transform.c',
  'ttfinstrsui.c',
  'uiutil.c',
  'usermenu.c',
  'windowmenu.c',
  'wordlistparser.c',
  'wordlistparser.h',
])

fontforge_noui_sources = files([
  'startnoui.c'
])

fontforgeexe = executable('fontforge',
  fontforge_graphical_sources,
  include_directories: [default_includes, include_directories('../fontforge')],
  dependencies: [libfontforge_dep, libgdraw_dep],
)
