gdraw_sources = files([
  'choosericons.c',
  'colorP.h',
  'ctlvalues.c',
  'div_tables.c',
  'drawboxborder.c',
  'fontP.h',
  'gaskdlg.c',
  'gbuttons.c',
  'gchardlg.c',
  'gcolor.c',
  'gcontainer.c',
  'gdraw.c',
  'gdrawable.c',
  'gdrawbuildchars.c',
  'gdrawerror.c',
  'gdrawgimage.c',
  'gdrawP.h',
  'gdrawtxt.c',
  'gdrawtxtinit.c',
  'gfilechooser.c',
  'gfiledlg.c',
  'ggadgetP.h',
  'ggadgets.c',
  'ggdkcdraw.c',
  'ggdkdraw.c',
  'ggdkdrawlogger.c',
  'ggdkdrawP.h',
  'ggroupbox.c',
  'ghvbox.c',
  'gimagebmpP.h',
  'gimageclut.c',
  'gimagecvt.c',
  'gimagepsdraw.c',
  'gimagewriteeps.c',
  'gimagexdraw.c',
  'gkeysym.c',
  'glist.c',
  'gmatrixedit.c',
  'gmenu.c',
  'gprogress.c',
  'gpsdraw.c',
  'gpsdrawP.h',
  'gpstxtinit.c',
  'gradio.c',
  'gresedit.c',
  'gresource.c',
  'gresourceimage.c',
  'gresourceP.h',
  'gsavefiledlg.c',
  'gscrollbar.c',
  'gspacer.c',
  'gtabset.c',
  'gtextfield.c',
  'gtextinfo.c',
  'gwidgetP.h',
  'gwidgets.c',
  'gxcdraw.c',
  'gxcdrawP.h',
  'gxdraw.c',
  'gxdrawP.h',
  'hotkeys.c',
  'hotkeys.h',
  'xkeysyms_unicode.c',
])

libgdraw = static_library('gdraw',
  gdraw_sources,
  include_directories: default_includes,
  dependencies: [libgutils_dep, gdk_dep],
)

libgdraw_dep = declare_dependency(link_with : libgdraw, dependencies: [libgutils_dep, gdk_dep])
