gutils_sources = files([
  'dlist.c',
  'fsys.c',
  'g_giomime.c',
  'gcol.c',
  'gimage.c',
  'gimagebmpP.h',
  'gimageread.c',
  'gimagereadbmp.c',
  'gimagereadgif.c',
  'gimagereadjpeg.c',
  'gimagereadpng.c',
  'gimagereadras.c',
  'gimagereadrgb.c',
  'gimagereadtiff.c',
  'gimagereadxbm.c',
  'gimagereadxpm.c',
  'gimagewritebmp.c',
  'gimagewritegimage.c',
  'gimagewritejpeg.c',
  'gimagewritepng.c',
  'gimagewritexbm.c',
  'gimagewritexpm.c',
  'gio.c',
  'giofile.c',
  'giofuncP.h',
  'giofuncP.h',
  'giotrans.c',
  'gutils.c',
  'gwwintl.c',
  'prefs.c',
  'prefs.h',
  'unicodelibinfo.c',
  'unicodelibinfo.h',
])

libgutils = static_library('gutils',
  gutils_sources,
  include_directories: default_includes,
  dependencies: [dep_libgunicode, dep_glib, dep_gio],
)

dep_libgutils = declare_dependency(link_with : libgutils, dependencies: [dep_libgunicode, dep_glib, dep_gio])
